# yolact_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: yolact_ros.launch
msg/: Object.msg  yolact_objects.msg
scripts/: yolact_ros_node.py
src/yolact/: yolact.py  yolact_ros_class.py
src/yolact/data/: coco.py
src/yolact/layers/: box_utils.py  output_utils.py
src/yolact/layers/functions/: detection.py
src/yolact/layers/modules/: multibox_loss.py
src/yolact/utils/: augmentations.py
